content/v8.x/zh-CN/doc/api/v8.md
# V8

<!--introduced_in=v4.0.0-->

The `v8` module exposes APIs that are specific to the version of [V8](https://developers.google.com/v8/) built into the Node.js binary. 可以通过如下方式使用：

```js
const v8 = require('v8');
```

*注意*：API 及其实现随时都有可能更改。

## v8.cachedDataVersionTag()

<!-- YAML
added: v8.0.0
-->

Returns an integer representing a "version tag" derived from the V8 version, command line flags and detected CPU features. This is useful for determining whether a [`vm.Script`][] `cachedData` buffer is compatible with this instance of V8.

## v8.getHeapSpaceStatistics()

<!-- YAML
added: v6.0.0
changes:

  - version: v7.5.0
    pr-url: https://github.com/nodejs/node/pull/10186
    description: Support values exceeding the 32-bit unsigned integer range.
-->

Returns statistics about the V8 heap spaces, i.e. the segments which make up the V8 heap. Neither the ordering of heap spaces, nor the availability of a heap space can be guaranteed as the statistics are provided via the V8 [`GetHeapSpaceStatistics`][] function and may change from one V8 version to the next.

返回值是包含如下属性的对象数组：

* `space_name` {string}
* `space_size` {number}
* `space_used_size` {number}
* `space_available_size` {number}
* `physical_space_size` {number}

例如：

```json
[
  {
    "space_name": "new_space",
    "space_size": 2063872,
    "space_used_size": 951112,
    "space_available_size": 80824,
    "physical_space_size": 2063872
  },
  {
    "space_name": "old_space",
    "space_size": 3090560,
    "space_used_size": 2493792,
    "space_available_size": 0,
    "physical_space_size": 3090560
  },
  {
    "space_name": "code_space",
    "space_size": 1260160,
    "space_used_size": 644256,
    "space_available_size": 960,
    "physical_space_size": 1260160
  },
  {
    "space_name": "map_space",
    "space_size": 1094160,
    "space_used_size": 201608,
    "space_available_size": 0,
    "physical_space_size": 1094160
  },
  {
    "space_name": "large_object_space",
    "space_size": 0,
    "space_used_size": 0,
    "space_available_size": 1490980608,
    "physical_space_size": 0
  }
]
```

## v8.getHeapStatistics()

<!-- YAML
added: v1.0.0
changes:

  - version: v7.2.0
    pr-url: https://github.com/nodejs/node/pull/8610
    description: Added `malloced_memory`, `peak_malloced_memory`,
                 and `does_zap_garbage`.
  - version: v7.5.0
    pr-url: https://github.com/nodejs/node/pull/10186
    description: Support values exceeding the 32-bit unsigned integer range.
-->

返回具有如下属性的对象：

* `total_heap_size` {number}
* `total_heap_size_executable` {number}
* `total_physical_size` {number}
* `total_available_size` {number}
* `used_heap_size` {number}
* `heap_size_limit` {number}
* `malloced_memory` {number}
* `peak_malloced_memory` {number}
* `does_zap_garbage` {number}

`does_zap_garbage` is a 0/1 boolean, which signifies whether the `--zap_code_space` option is enabled or not. This makes V8 overwrite heap garbage with a bit pattern. The RSS footprint (resident memory set) gets bigger because it continuously touches all heap pages and that makes them less likely to get swapped out by the operating system.

例如：

```js
{
  total_heap_size: 7326976,
  total_heap_size_executable: 4194304,
  total_physical_size: 7326976,
  total_available_size: 1152656,
  used_heap_size: 3476208,
  heap_size_limit: 1535115264,
  malloced_memory: 16384,
  peak_malloced_memory: 1127496,
  does_zap_garbage: 0
}
```

## v8.setFlagsFromString(string)<!-- YAML
added: v1.0.0
-->The 

`v8.setFlagsFromString()` method can be used to programmatically set V8 command line flags. 在使用这个方法时应当小心。 Changing settings after the VM has started may result in unpredictable behavior, including crashes and data loss; or it may simply do nothing.

The V8 options available for a version of Node.js may be determined by running `node --v8-options`. An unofficial, community-maintained list of options and their effects is available [here](https://github.com/thlorenz/v8-flags/blob/master/flags-0.11.md).

用法：

```js
// Print GC events to stdout for one minute.
const v8 = require('v8');
v8.setFlagsFromString('--trace_gc');
setTimeout(function() { v8.setFlagsFromString('--notrace_gc'); }, 60e3);
```

## 序列化 API

> 稳定性：1 - 实验中

The serialization API provides means of serializing JavaScript values in a way that is compatible with the [HTML structured clone algorithm](https://developer.mozilla.org/en-US/docs/Web/API/Web_Workers_API/Structured_clone_algorithm). 其格式是向后兼容的（例如：可安全存储到磁盘）

*Note*: This API is under development, and changes (including incompatible changes to the API or wire format) may occur until this warning is removed.

### v8.serialize(value)<!--
added: v8.0.0
-->

* 返回：{Buffer}

使用 [`DefaultSerializer`][] 来将 `value` 序列化到缓冲区中。

### v8.deserialize(buffer)

<!--
added: v8.0.0
-->

* `buffer` {Buffer|Uint8Array} 由 [`serialize()`][] 返回的缓冲区。

Uses a [`DefaultDeserializer`][] with default options to read a JS value from a buffer.

### class: v8.Serializer

<!--
added: v8.0.0
-->

#### new Serializer()

创建一个新的 `Serializer` 对象。

#### serializer.writeHeader()

写出一个头信息，其中包含序列化格式版本。

#### serializer.writeValue(value)

Serializes a JavaScript value and adds the serialized representation to the internal buffer.

如果 `value` 不能被序列化，则抛出一个错误。

#### serializer.releaseBuffer()

返回已存储的内部缓冲区。 This serializer should not be used once the buffer is released. Calling this method results in undefined behavior if a previous write has failed.

#### serializer.transferArrayBuffer(id, arrayBuffer)

* `id` {integer} 一个32位无符号整数。
* `arrayBuffer` {ArrayBuffer} 一个 `ArrayBuffer` 实例。

标记一个 `ArrayBuffer`，表明它的内容正在向外传输。 Pass the corresponding `ArrayBuffer` in the deserializing context to [`deserializer.transferArrayBuffer()`][].

#### serializer.writeUint32(value)

* `value` {integer}

写一个原始的32位无符号整数。 用于自定义的 [`serializer._writeHostObject()`][] 中。

#### serializer.writeUint64(hi, lo)

* `hi` {integer}
* `lo` {integer}

写一个原始的64位无符号整数，并将其拆分为32位的高低两部分。 用于自定义的 [`serializer._writeHostObject()`][] 中。

#### serializer.writeDouble(value)

* `value` {number}

写一个 JS `number` 数值。 用于自定义的 [`serializer._writeHostObject()`][] 中。

#### serializer.writeRawBytes(buffer)

* `buffer` {Buffer|Uint8Array}

将原始字节写入序列化程序内部缓冲区。 The deserializer will require a way to compute the length of the buffer. 用于自定义的 [`serializer._writeHostObject()`][] 中。

#### serializer.\_writeHostObject(object)

* `object` {Object}

This method is called to write some kind of host object, i.e. an object created by native C++ bindings. If it is not possible to serialize `object`, a suitable exception should be thrown.

This method is not present on the `Serializer` class itself but can be provided by subclasses.

#### serializer.\_getDataCloneError(message)

* `message` {string}

This method is called to generate error objects that will be thrown when an object can not be cloned.

This method defaults to the [`Error`][] constructor and can be overridden on subclasses.

#### serializer.\_getSharedArrayBufferId(sharedArrayBuffer)

* `sharedArrayBuffer` {SharedArrayBuffer}

This method is called when the serializer is going to serialize a `SharedArrayBuffer` object. It must return an unsigned 32-bit integer ID for the object, using the same ID if this `SharedArrayBuffer` has already been serialized. When deserializing, this ID will be passed to [`deserializer.transferArrayBuffer()`][].

如果无法序列化对象，则应抛出异常。

This method is not present on the `Serializer` class itself but can be provided by subclasses.

#### serializer.\_setTreatArrayBufferViewsAsHostObjects(flag)

* `flag` {boolean} **Default:** `false`

Indicate whether to treat `TypedArray` and `DataView` objects as host objects, i.e. pass them to [`serializer._writeHostObject()`][].

### class: v8.Deserializer

<!--
added: v8.0.0
-->

#### new Deserializer(buffer)

* `buffer` {Buffer|Uint8Array} 由 [`serializer.releaseBuffer()`][] 返回的缓冲区。

创建一个新的 `Deserializer` 对象。

#### deserializer.readHeader()

读取并验证一个头信息 （包括格式版本）。 例如，可以拒绝一个非法或不被支持的传输格式。 In that case, an `Error` is thrown.

#### deserializer.readValue()

从缓冲区中反序列化一个 JavaScript 值并返回它。

#### deserializer.transferArrayBuffer(id, arrayBuffer)

* `id` {integer} 一个32位无符号整数。
* `arrayBuffer` {ArrayBuffer|SharedArrayBuffer} 一个 `ArrayBuffer` 实例。

标记一个 `ArrayBuffer`，表明它的内容正在向外传输。 Pass the corresponding `ArrayBuffer` in the serializing context to [`serializer.transferArrayBuffer()`][] (or return the `id` from [`serializer._getSharedArrayBufferId()`][] in the case of `SharedArrayBuffer`s).

#### deserializer.getWireFormatVersion()

* 返回：{integer}

读取底层的传输格式版本。 Likely mostly to be useful to legacy code reading old wire format versions. May not be called before `.readHeader()`.

#### deserializer.readUint32()

* 返回：{integer}

读取原始32位无符号整数并将其返回。 用于在自定义 [`deserializer._readHostObject()`][] 中使用。

#### deserializer.readUint64()

* 返回：{Array}

Read a raw 64-bit unsigned integer and return it as an array `[hi, lo]` with two 32-bit unsigned integer entries. 用于在自定义 [`deserializer._readHostObject()`][] 中使用。

#### deserializer.readDouble()

* 返回：{number}

读取一个 JS `number` 值。 用于在自定义 [`deserializer._readHostObject()`][] 中使用。

#### deserializer.readRawBytes(length)

* 返回：{Buffer}

从反序列化程序内部缓冲区中读取原始字节。 The `length` parameter must correspond to the length of the buffer that was passed to [`serializer.writeRawBytes()`][]. 用于在自定义 [`deserializer._readHostObject()`][] 中使用。

#### deserializer.\_readHostObject()

This method is called to read some kind of host object, i.e. an object that is created by native C++ bindings. If it is not possible to deserialize the data, a suitable exception should be thrown.

This method is not present on the `Deserializer` class itself but can be provided by subclasses.

### class: v8.DefaultSerializer

<!--
added: v8.0.0
-->

A subclass of [`Serializer`][] that serializes `TypedArray` (in particular [`Buffer`][]) and `DataView` objects as host objects, and only stores the part of their underlying `ArrayBuffer`s that they are referring to.

### class: v8.DefaultDeserializer

<!--
added: v8.0.0
-->

A subclass of [`Deserializer`][] corresponding to the format written by [`DefaultSerializer`][].